--- a/app/catalog.html
+++ b/app/catalog.html
@@ -48,7 +48,7 @@
       </ul>
    </div>
 
-   <header class="header">
+  <header class="header">
     <div class="header-top">
       <div class="container">
         <div class="header-top__w">
@@ -106,7 +106,7 @@
               <a href="tel:88000000000">8 (800) 000-00-00</a>
               <p>Пн-Пт: с 9:30 до 19:00 <br> Сб: с 10:00 до 15:00</p>
             </div>
-            <a href="#!" class="btn-main header-btn">Заказать звонок</a>
+            <a href="#!" class="btn-main header-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Заказать звонок</a>
           </div>
         </div>
       </div>
@@ -119,6 +119,17 @@
               <button><img src="images/icons/search.svg" alt=""></button>
             </div>
           </form>
+          <div class="nav-compare">
+            <a href="#!" class="compare-link">
+              <span class="icon">
+                <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M7 17V8H2.59961C2.03956 8 1.75981 8 1.5459 8.10899C1.35774 8.20487 1.20487 8.35786 1.10899 8.54602C1 8.75993 1 9.03992 1 9.59998V17H7ZM7 17H13M7 17V2.59998C7 2.03992 7 1.75993 7.10899 1.54602C7.20487 1.35786 7.35774 1.20487 7.5459 1.10899C7.75981 1 8.03956 1 8.59961 1H11.3996C11.9597 1 12.2405 1 12.4544 1.10899C12.6425 1.20487 12.7948 1.35786 12.8906 1.54602C12.9996 1.75993 13 2.03992 13 2.59998V17M13 17L19 17V6.59998C19 6.03992 18.9996 5.75993 18.8906 5.54602C18.7948 5.35786 18.6425 5.20487 18.4544 5.10899C18.2405 5 17.9601 5 17.4 5H13V17Z" stroke="#414042" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>                  
+              </span>
+              <p>Сравнения</p>
+            </a>
+            <span class="compare-count">0</span>
+          </div>
         </div>
         <div class="container">
           <div class="header-nav__w">
@@ -695,6 +706,7 @@
             </div>
             <div class="contacts-i">
               <a href="tel:88000000000">8 (800) 000-00-00</a>
+              <a href="tel:8 (800) 2222-801">8 (800) 2222-801</a>
               <p>Пн-Пт: с 9:30 до 19:00 <br> Сб: с 10:00 до 15:00</p>
             </div>
     
@@ -717,6 +729,7 @@
       </div>
     </div>
   </header>
+
   <div class="wrapper">
     <main class="main">
       <div class="fixed-socials">
@@ -1121,7 +1134,16 @@
             <div class="catalog-main">
               <div class="breadcrumbs">
                <ul>
-                 <li><a href="#">Главная</a></li>
+                <li class="active relative drop-container">
+                  <span>Главная <img src="images/icons/bread-drop-arrow.svg" alt=""></span>
+                  <div class="drop">
+                    <ul class="drop-menu">
+                      <li><a href="#">Поверка оборудования</a></li>
+                      <li><a href="#">О компании</a></li>
+                      <li><a href="#">Подбор оборудования</a></li>
+                    </ul>
+                  </div>
+                </li>
                  <li class="active relative drop-container">
                   <span>Каталог <img src="images/icons/bread-drop-arrow.svg" alt=""></span>
                   <div class="drop">
@@ -1241,12 +1263,12 @@
               <div class="card-main">
                 <p class="card__label card__label--hits">Хит продаж</p>
                 <div class="card-arrows">
-          <div class="card-arrow card-arrow--prev">
-            <img class="card-a" src="images/icons/slider-arrow-left.svg" alt="img">
-          </div>
-          <div class="card-arrow card-arrow--next">
-            <img class="card-a" src="images/icons/slider-arrow.svg" alt="img">
-          </div>
+                <div class="card-arrow card-arrow--prev">
+                  <img class="card-a" src="images/icons/slider-arrow-left.svg" alt="img">
+                </div>
+                <div class="card-arrow card-arrow--next">
+                  <img class="card-a" src="images/icons/slider-arrow.svg" alt="img">
+                </div>
                  </div>
                 <div class="card-slider">
                   <a href="images/card-1.jpg">
@@ -1748,13 +1770,15 @@
         </div>
       </div>
     </main>
+
     <footer class="footer">
       <div class="footer-main">
         <div class="container">
           <div class="footer-wrapper">
-            <a href="#!" class="logo">
+            <a href="#" class="logo">
               <img src="images/icons/logo.png" alt="img">
-              <p class="footer-m ftr-cat-btn">Каталог оборудования</p>
+              <p class="footer-m ftr-cat-btn">Каталог оборудования <img src="images/icons/cat-arrow.svg" alt="" class="for-mob"></p>
+            
             </a>
             <div class="footer-nav">
               <p class="footer-nav__title">Каталог оборудования</p>
@@ -1907,6 +1931,7 @@
                 <h4>Контакты</h4>
                 <div class="contacts-i">
                 <a href="tel:88000000000">8 (800) 000-00-00</a>
+                <a href="tel:8 (800) 2222-801">8 (800) 2222-801</a>
                 <p>Пн-Пт: с 9:30 до 19:00 <br> Сб: с 10:00 до 15:00</p>
                 </div>
                 <ul class="social">
@@ -1966,9 +1991,98 @@
         </div>
       </div>
     </footer>
+
+    <!-- Back to top button -->
+    <a href="#" id="scroll-top" style="display: none;"><img src="images/icons/top-arrow.svg" alt=""></a>
   </div>
 
+  <!-- Button trigger modal -->
+  <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    Launch demo modal
+  </button> -->
 
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title" id="exampleModalLabel">Заполните данные и мы свяжемся с вами в рабочее время</h1>
+          <button type="button" class="modal-close" data-bs-dismiss="modal" aria-label="Close">
+            <img src="images/icons/modal-close.svg" alt="">
+          </button>
+        </div>
+        <div class="modal-body">
+          <form action="#!" id="modal-form">
+            <div class="form-group">
+              <input type="text" name="modal-name" id="modal-name" placeholder="Имя *" required>
+            </div>
+            <div class="form-group">
+              <input type="tel" name="phone" id="modal-phone" placeholder="Телефон*" required>
+            </div>
+            <div class="select-block">
+              <span>Интересующая услуга</span>
+              <select>
+                <option value=""></option>
+                <option value="">1</option>
+                <option value="">2</option>
+              </select>
+            </div>
+  
+            <div class="modal-btn">
+              <button type="submit" class="btn-main" id="modal-form-btn" data-bs-toggle="modal" data-bs-target="#thanks">Заказать</button>
+            </div>
+            <label class="control control--checkbox">
+              <input type="checkbox" checked="checked"/>
+                <div class="control__indicator"></div>
+                <span>Даю свое согласие на обработку персональных данных</span>
+              </label>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Button trigger modal -->
+  <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#thanks">
+    Launch demo modal
+  </button> -->
+
+  <!-- Modal -->
+  <div class="modal fade modal-thanks" id="thanks" tabindex="-1" aria-labelledby="thanksLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="modal-close" data-bs-dismiss="modal" aria-label="Close">
+            <img src="images/icons/modal-close.svg" alt="">
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="thanks-block">
+            <h3>Спасибо за вашу заявку!</h3>
+
+            <div class="thanks-order">
+              <div class="icon">
+                <svg width="54" height="48" viewBox="0 0 54 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M50.8881 7.10344C49.2998 7.10344 48.0015 8.37716 47.9658 9.95704L47.0372 17.1352C46.5859 16.1607 45.5998 15.4821 44.4574 15.4821C43.3663 15.4821 42.3721 16.1106 41.8984 17.0924C40.3117 19.3652 37.622 22.9607 36.5778 23.7428C35.1563 24.8115 33.1466 25.5584 33.1265 25.566C33.0189 25.6057 32.9216 25.6624 32.8377 25.7347C31.9064 26.1008 31.1091 26.7588 30.5636 27.6151C30.5547 27.628 30.5475 27.6401 30.5399 27.6534L30.5386 27.653C30.2935 28.049 30.106 28.4811 29.981 28.9361C29.51 30.2008 28.9475 32.1602 28.902 34.3607L28.627 38.6723L27.8346 38.6763H27.3435C27.2373 38.6344 27.1221 38.6089 27.0007 38.6089C26.8792 38.6089 26.7632 38.6339 26.6565 38.6754H26.1667L25.373 38.6714L25.0989 34.4014C25.0542 32.1625 24.4908 30.2018 24.0185 28.9371C23.8958 28.48 23.7096 28.0487 23.4623 27.6541C23.456 27.6438 23.4489 27.6344 23.4431 27.6241C22.8967 26.7621 22.0967 26.1009 21.1627 25.7344C21.0788 25.6625 20.9815 25.605 20.8739 25.5657C20.8534 25.5581 18.8462 24.8112 17.4212 23.7416C16.3792 22.9603 13.69 19.3657 12.1016 17.0924C11.6306 16.1107 10.6377 15.4817 9.54487 15.4817C8.4029 15.4817 7.41675 16.1602 6.9659 17.1344L6.03643 9.95664C5.99983 8.3763 4.70341 7.10304 3.11369 7.10304C1.50204 7.10304 0.191406 8.41379 0.191406 10.0241V20.6121C0.191406 20.7482 0.22355 20.8795 0.281139 21C0.366407 21.3777 0.50971 21.7335 0.697653 22.0402L7.0892 33.5613C7.23428 33.9042 7.41374 34.2243 7.62313 34.5131C7.63027 34.5238 7.63741 34.5337 7.645 34.5444C8.14144 35.2247 8.80078 35.768 9.55483 36.1203C9.77001 36.2609 10.9285 37.0667 11.9012 38.6444C11.8686 38.6533 11.8361 38.6622 11.8048 38.6743H10.9093C10.3789 38.6743 9.94945 39.1042 9.94945 39.6341V46.6676C9.94945 47.1975 10.3789 47.6274 10.9093 47.6274H26.9984H27.0011H43.0925C43.6224 47.6274 44.0523 47.1975 44.0523 46.6676V39.6341C44.0523 39.1042 43.6224 38.6743 43.0925 38.6743H42.1965C42.1653 38.6622 42.1327 38.6533 42.0992 38.6444C43.0751 37.0617 44.2367 36.2564 44.4444 36.1207C45.1908 35.7725 45.8435 35.2386 46.3355 34.572C46.3444 34.5604 46.3529 34.5497 46.3618 34.5377C46.5832 34.2318 46.768 33.9028 46.9113 33.5586L53.2851 22.0718C53.4828 21.7454 53.6248 21.3972 53.7114 21.0352C53.7752 20.9053 53.8087 20.7606 53.8087 20.6129V10.0241C53.8105 8.41377 52.5003 7.10303 50.8891 7.10303L50.8881 7.10344ZM10.4081 34.3983C9.94158 34.1898 9.53086 33.8586 9.21884 33.442C9.21035 33.43 9.20277 33.4184 9.19384 33.4068C9.05679 33.2206 8.93981 33.0086 8.84517 32.7782C8.83089 32.7429 8.81437 32.7099 8.79651 32.6769L2.35903 21.0757C2.24251 20.8851 2.16617 20.6775 2.13269 20.4583C2.12777 20.4275 2.12108 20.3967 2.11304 20.3664L2.1126 10.0244C2.1126 9.47263 2.56259 9.02352 3.11482 9.02352C3.6684 9.02352 4.11839 9.47263 4.11839 10.0244C4.11839 10.0655 4.12107 10.107 4.12598 10.1481L5.33581 19.4865C5.34072 19.5606 5.355 19.6342 5.37822 19.7075C5.4059 19.795 5.42509 19.8856 5.43759 19.9762C5.47286 20.2222 5.61125 20.4409 5.80635 20.5918C6.75099 21.6182 7.64829 22.7865 8.47595 24.0651C8.48086 24.0727 8.48755 24.0785 8.49247 24.0856C9.07818 25.4423 9.69738 26.799 10.3389 28.1209C10.5054 28.4629 10.8469 28.6616 11.2036 28.6616C11.3442 28.6616 11.4871 28.6308 11.6223 28.5656C12.0991 28.3339 12.2982 27.7593 12.0665 27.2825C11.4107 25.9316 10.7755 24.5427 10.1799 23.1544C10.1442 23.0705 10.0942 22.9981 10.0397 22.9303C9.79643 22.4816 8.9875 20.8968 8.76476 19.2776C8.74512 19.133 8.72815 18.9897 8.71878 18.845V18.8432C8.71387 18.7696 8.69824 18.6986 8.67771 18.6307C8.67592 18.6245 8.67592 18.6178 8.67369 18.612C8.64289 18.5173 8.62682 18.42 8.62682 18.3254C8.62682 17.8164 9.03976 17.403 9.54735 17.403C9.91164 17.403 10.2415 17.62 10.3875 17.9553C10.413 18.0133 10.4438 18.0691 10.4804 18.1209C10.9009 18.7245 14.6366 24.053 16.2719 25.2785C17.5782 26.2584 19.2228 26.9727 19.9014 27.2464C20.0032 27.3379 20.1255 27.4089 20.2626 27.4504C20.9077 27.6495 21.4644 28.079 21.8305 28.6633C21.8323 28.6673 21.8354 28.6718 21.8381 28.6754C21.9885 28.9173 22.1019 29.1843 22.1747 29.4678C22.1836 29.5017 22.1934 29.5343 22.2059 29.5669C22.6282 30.6901 23.1407 32.4463 23.1832 34.4825L23.4506 38.6624L14.0751 38.6182C12.7479 35.8695 10.7528 34.599 10.514 34.4543C10.4801 34.4334 10.4443 34.4151 10.4082 34.3981L10.4081 34.3983ZM11.8706 45.709V40.5957H13.4777C13.5857 40.5957 13.6889 40.5716 13.788 40.5367L24.387 40.5872C24.4161 40.5899 24.4442 40.5957 24.4736 40.5957H26.0411L26.0397 45.709L11.8706 45.709ZM42.1335 45.709H27.962V40.5957H29.5295C29.5585 40.5957 29.5871 40.5899 29.6161 40.5872L40.2138 40.5367C40.3138 40.5711 40.4174 40.5957 40.525 40.5957H42.1339L42.1335 45.709ZM51.8897 20.3616C51.8808 20.3951 51.875 20.429 51.8687 20.4634C51.8361 20.6786 51.7611 20.8857 51.6263 21.1103L45.2057 32.6771C45.187 32.7124 45.1691 32.7481 45.1544 32.7852C45.0705 32.9937 44.9606 33.1954 44.828 33.3829C44.8191 33.3937 44.812 33.4035 44.8044 33.4142C44.4919 33.8437 44.0727 34.1843 43.5941 34.399C43.5615 34.4133 43.5289 34.4303 43.4981 34.4481C43.4035 34.5044 41.3017 35.7762 39.9281 38.6177L30.5535 38.6619L30.8223 34.4404C30.8634 32.4444 31.3745 30.6882 31.796 29.5655C31.8089 29.5347 31.8183 29.503 31.8259 29.4713C31.8969 29.1994 32.0044 28.9418 32.1473 28.7056C32.1576 28.6914 32.1669 28.6762 32.1763 28.661C32.5397 28.0793 33.0969 27.6489 33.741 27.4503C33.8785 27.4087 33.9995 27.3369 34.1022 27.2462C34.7812 26.9721 36.4272 26.2587 37.7312 25.2784C39.3678 24.0529 43.1026 18.7248 43.5227 18.1208C43.5593 18.0694 43.5893 18.0149 43.6143 17.9574C43.7629 17.6207 44.0928 17.4024 44.4576 17.4024C44.9651 17.4024 45.3781 17.8158 45.3781 18.3248C45.3781 18.4194 45.362 18.5167 45.3321 18.6114C45.3294 18.6172 45.3294 18.623 45.3281 18.6279C45.3071 18.6971 45.2901 18.7694 45.2857 18.8448C45.262 19.2065 45.2018 19.5721 45.1205 19.9279C45.1156 19.9475 45.1116 19.969 45.1076 19.9895C45.1013 20.0136 45.0946 20.0377 45.0888 20.0618C44.7652 21.3886 44.1629 22.5636 43.9611 22.9342C43.9085 23.0007 43.8598 23.0717 43.825 23.1529C43.2477 24.4993 42.6121 25.8882 41.9374 27.2824C41.7062 27.7592 41.9062 28.3337 42.3834 28.565C42.5182 28.6302 42.6611 28.6606 42.8008 28.6606C43.1575 28.6606 43.4995 28.461 43.666 28.1186C44.3245 26.7575 44.9432 25.4012 45.5151 24.0802C45.5191 24.0744 45.5241 24.0695 45.5281 24.0637C46.3415 22.8061 47.2267 21.652 48.1602 20.6316C48.3776 20.482 48.5249 20.2467 48.5651 19.9838C48.5785 19.8892 48.5977 19.7945 48.6267 19.7034C48.6428 19.6503 48.6557 19.5958 48.662 19.5409L49.8781 10.1477C49.883 10.1075 49.8857 10.0655 49.8857 10.0249C49.8857 9.47313 50.3357 9.02402 50.8893 9.02402C51.4415 9.02402 51.8901 9.47313 51.8901 10.0249L51.8897 20.3616Z" fill="white"/>
+                  <path d="M32.7111 5.33662C33.6499 5.33662 34.4124 6.10135 34.4124 7.04153C34.4124 7.57189 34.8423 8.00135 35.3722 8.00135C35.9035 8.00135 36.3321 7.57189 36.3321 7.04153C36.3321 5.0429 34.7084 3.4165 32.711 3.4165C32.1811 3.4165 31.7512 3.84641 31.7512 4.37632C31.7512 4.90712 32.1811 5.33658 32.711 5.33658L32.7111 5.33662Z" fill="white"/>
+                  <path d="M26.4893 23.1857C26.6371 23.279 26.813 23.3321 27.0005 23.3321H27.0032C27.1911 23.3321 27.3666 23.2777 27.5143 23.1844C39.7818 16.5401 39.4423 7.82665 39.3806 7.00037C39.3596 3.34094 36.3757 0.371338 32.7118 0.371338C30.3078 0.371338 28.177 1.67488 27.0011 3.61157C25.8261 1.67499 23.6948 0.371338 21.2922 0.371338C17.6261 0.371338 14.6418 3.3414 14.6194 7.00037C14.5573 7.82716 14.218 16.5414 26.4891 23.1855L26.4893 23.1857ZM16.5348 7.13314C16.5375 7.10234 16.5393 7.07154 16.5393 7.04029C16.5393 4.42154 18.6709 2.29034 21.292 2.29034C23.8571 2.29034 25.9871 4.37606 26.0407 6.93949C26.0523 7.46181 26.4786 7.87967 27.0005 7.87967C27.5219 7.87967 27.9491 7.46226 27.9603 6.93993C28.0139 4.37605 30.1465 2.29033 32.7116 2.29033C35.3303 2.29033 37.4603 4.42153 37.4603 7.04028C37.4603 7.07108 37.463 7.10233 37.4652 7.13313C37.4723 7.2126 38.0924 15.0737 27.0001 21.2748C15.9799 15.1195 16.5068 7.45542 16.5349 7.13313L16.5348 7.13314Z" fill="white"/>
+                </svg>                
+              </div>
+              <p>№ заказа ______ выслан на ваш e-mail</p>
+            </div>
+
+            <div class="thanks-text">
+              <p>Ожидайте звонка менеджера для уточнения деталей заказа  в рабочее время</p>
+            </div>
+            <div class="thanks-graphic">
+              <p><span>Пн-Пт:</span> с 9:30 до 19:00</p>
+              <p><span>Сб:</span> с 10:00 до 15:00</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="js/main.min.js"></script>
   <script src="js/main.js"></script>
